frontend/src/components/companies/companies.scss
/* ... */
#loader-screen {
    position: fixed;
    top: 0; left: 0; right: 0; bottom: 0;
    background: $gradient-background;

    .loader-content {
        position: absolute;
        top: 10px; left: 10px; right: 10px; bottom: 10px;
        border: 10px transparent;
        background-color: white;
    }

    img.lba-logo {
        padding-top: 30px;
        padding-left: 30px;
    }
    .loader-logo {
        padding-top: 25vh;
        @media (max-width: $min-width-small-mobile) { padding-top: 20vh; }
        margin-bottom: 50px;
        text-align: center;

        img {
            -webkit-animation: rotate 5s linear infinite;
            animation: rotate 5s linear infinite;
            @include rotate();
        }
    }

    .loader-text {
        margin: auto;
        width: 700px;
        max-width: 100%;
        text-align: center;
        font-size: 2em;
        @media (max-width: $min-width-mobile) { font-size: 1.75em; }
        @media (max-width: $min-width-small-mobile) { font-size: 1.5em; }

        p.intro { margin-bottom: 15px; }

    }
}

#map-container {

    #results {
        display: flex;

        &.loading #map-results {
            opacity: 0.5;
        }
    }
}

#map-results {
    height: 100vh;
    width: 100%;
    flex: $flex-left;
    transition: opacity 0.2s ease;

    // Make the center icon move when user move the map
    .center-icon {
        transition: all 0.5s ease;
    }

    .leaflet-control-container > div:first-child {
        bottom: 25px; right: 10px; top: auto; left: auto;
        @media (max-width: $min-width-mobile) { display: none; }
    }

    .popup-content {
        color: black;
        &:hover {
            cursor: pointer;
        }
        span {
            display: block;
            &.icon { display: inline-block; vertical-align: middle; margin-right: 5px; }
            &.blue { font-weight: bold; color: $blue; }
            &.pink { font-weight: bold; color: $pink; }
        }
    }
}


#list-results {
    flex: $flex-right;
    margin-top: 80px;

    display: flex;
    flex-direction: column;

    &.loading { opacity: 0.5; }

    .list-results-header {
        position: relative;
        padding: 10px 30px 0 30px;

        a.logo {
            display: block;
            margin-bottom: 30px;
            margin-top: 10px;
        }

        button.toggle-search {
            position: absolute;
            top: 15px;
            right: 25px;
        }
    }

    h2 {
        padding: 10px 20px;
        @media (max-width: $min-width-mobile) {font-size: 1.2em; }
    }

    ul.list {
        margin: 10px 0;
        height: 70vh;
        overflow: auto;
        @media (max-width: $min-width-mobile) { height: inherit; }
    }

    .company-list-item {
        display: block;
        border-bottom: solid 2px #EDEDED;
        &:last-child { border-bottom: none; }

        .title {
            font-weight: bold;
            color: $blue;

            // Favorite button
            button.favorite-button {
                border: none;
                background: none;
                float: right;
            }
        }

        > div {
            min-height: 100px;
            padding: 15px 20px 10px 20px;
            border-left: solid 5px transparent;
        }

        &:hover {
            cursor: pointer;
            .title, .see-more {
                text-decoration: underline;
            }

            > div {
                background-color: lightgray;
                border-left: solid 5px $pink;
            }
        }

        .icon { margin-right: 5px; vertical-align: middle; }

        .see-more {
            border: none;
            background: transparent;
            margin-top: 5px;
            color: $pink;
        }
    }

    .filter-container {
        font-weight: bolder;
        font-size: 15px;
        padding: 10px 20px 5px 20px;
        color: $blue;
        display: flex;
        @media (max-width: $min-width-mobile) { display: block; }

        .loader {
            margin-right: 20px;
            margin-top: 10px;
            @include mx-loader();
        }

        span {
            font-weight: bolder;
            font-size: 16px;
            color: $blue;
        }

        button {
            outline: none;
            background: none;
            border: none;
        }

        button:first-child {
            flex: 10;
            display: inline-block;
            text-align: left;
        }
    }
}

#filters {
    padding-bottom: 80px;
    height: 70vh;
    overflow: auto;

    .filter-title {
        h3, button {
            display: inline-block;
        }
        h3 { padding: 10px 0 10px 10px; }
        button {
            float: right;
            padding: 10px;
            background: none;
            border: none;
            text-decoration: underline;
            font-size: 10.5px;
        }
    }

    li {
        display: block;
        border-bottom: solid 1px $lightgray;
        &:last-child { border-bottom: none; }

        button {
            font-size: 1em;
            display: flex;
            min-height: 40px;
            line-height: 40px;
            width: 100%;
            padding: 0 20px;

            background: none;
            border: none;
            border-left: solid 5px transparent;

            text-align: left;

            > span:first-child {
                width: 90%;
                min-height: 40px;
                span {
                    display: inline-block;
                    line-height: 20px;
                    vertical-align: middle;
                }
            }
            .icon { float: right; margin-top: 8px; }
        }

        &.selected {
            button { border-left: solid 5px $pink; }
        }

    }

    .button-container {
        text-align: center;
        margin-top: 30px;
        margin-bottom: 70px;
    }
}
/* ... */

